--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ gemfile:
   - "gemfiles/rails_4.0.gemfile"
 script: bundle exec rspec spec/examples
 bundler_args: --without=debug
+before_install:
+  - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
+  - sudo service cassandra start
 services:
   - cassandra
