--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ bundler_args: --without=debug
 before_install:
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
   - sudo service cassandra start
+after_failure: 'tail -n 100 /var/log/cassandra/cassandra.log'
 services:
   - cassandra
