--- a/rubocop-todo.yml
+++ b/rubocop-todo.yml
@@ -2,6 +2,9 @@
 # The point is for the user to remove these configuration records
 # one by one as the offences are removed from the code base.
 
+ClassLength:
+  Enabled: false
+
 MethodCallParentheses:
   Enabled: false
 
