--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - "2.0"
   - "1.9.3"
   - "rbx-2.2"
+  - "jruby-1.7"
 gemfile:
   - "gemfiles/rails_3.1.gemfile"
   - "gemfiles/rails_3.2.gemfile"
