--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ gemfile:
   - "gemfiles/rails_3.1.gemfile"
   - "gemfiles/rails_3.2.gemfile"
   - "gemfiles/rails_4.0.gemfile"
-script: 'bundle exec rake test rubocop'
+script: 'bundle exec rake test'
 before_install:
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
   - sudo service cassandra start
