Update generator config template for native protocol

--- a/templates/config/cequel.yml
+++ b/templates/config/cequel.yml
@@ -1,19 +1,18 @@
 <% app_name = Cequel::Record::Railtie.app_name -%>
 development:
-  host: '127.0.0.1:9042'
+  host: '127.0.0.1'
+  port: 9042
   keyspace: <%= app_name %>_development
 
 test:
-  host: '127.0.0.1:9042'
+  host: '127.0.0.1'
+  port: 9042
   keyspace: <%= app_name %>_test
 
 production:
   hosts:
-    - 'cass1.<%= app_name %>.biz:9042'
-    - 'cass2.<%= app_name %>.biz:9042'
-    - 'cass3.<%= app_name %>.biz:9042'
+    - 'cass1.<%= app_name %>.biz'
+    - 'cass2.<%= app_name %>.biz'
+    - 'cass3.<%= app_name %>.biz'
+  port: 9042
   keyspace: <%= app_name %>_production
-  thrift:
-    retries: 10
-    timeout: 15
-    connect_timeout: 15
