Allow options to specify setting replication strategy and settings from cequel.yml config file.
http://www.datastax.com/documentation/cql/3.0/cql/cql_reference/create_keyspace_r.html

Based on the config file settings used in create_keyspace https://github.com/reachlocal/cequel-migrations-rails/blob/master/lib/cequel-migrations-rails/keyspace_manager.rb#L16.

--- a/templates/config/cequel.yml
+++ b/templates/config/cequel.yml
@@ -4,6 +4,13 @@ development:
   port: 9042
   keyspace: <%= app_name %>_development
   max_retries: 3
+  strategy_class: SimpleStrategy
+  strategy_options:
+    replication_factor: 2
+#  strategy_class: NetworkTopologyStrategy
+#  strategy_options:
+#    DC1: 2
+#    DC2: 1
 
 test:
   host: '127.0.0.1'
