Allow config/cequel.yml to specify replication and durable_writes settings

--- a/templates/config/cequel.yml
+++ b/templates/config/cequel.yml
@@ -21,3 +21,11 @@ production:
   username: 'myappuser'
   password: 'password1'
   max_retries: 3
+  replication:
+    class: SimpleStrategy
+    replication_factor: 1
+# replication:
+#   class: NetworkTopologyStrategy
+#   datacenter1: 3
+#   datacenter2: 2
+# durable_writes: false
