--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ gemfile:
   - "gemfiles/rails_4.0.gemfile"
   - "gemfiles/rails_4.1.gemfile"
   - "gemfiles/rails_4.2.gemfile"
+  - "gemfiles/rails_5.0.gemfile"
 script: 'bundle exec rake test'
 bundler_args: '--without=debug'
 services:
