--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ gemfile:
 env:
   - CASSANDRA_VERSION: 2.1
   - CASSANDRA_VERSION: 2.2
+  - CASSANDRA_VERSION: 3.0
 
 script: script/ci-unit-test
 
