--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - ./:/cequel
     environment:
       - "CEQUEL_TEST_HOST=cassandra"
-      - "GIT_AUTHOR_NAME=WilliamFlanagan"
-      - "GIT_AUTHOR_EMAIL=wflanagan@audienti.com"
-      - "EMAIL=wflanagan@audienti.com"
+      - "GIT_AUTHOR_NAME=YourAuthorName"
+      - "GIT_AUTHOR_EMAIL=YourAuthor@email.com"
+      - "EMAIL=YourAuthor@email.com"
     working_dir: /cequel
     stdin_open: true
     tty: true
